# mips-hike

./: Makefile  README.md  model.cabal  model.nix  release.nix  shell.nix
compiler-src/: Main.hs
compiler-src/Lang/CLike/: Parser.hs  Types.hs
compiler-src/Lang/Compiler/: Compile.hs  Types.hs
compiler-src/Lang/MipsLike/: Types.hs
examples/: disp.mem  fibo.cl  fibo.mem  inte.mem  primes.cl  primes.mem  service.mem  sort.cl  sort.mem  stack.mem
src/: Main.hs
src/Model/: Runtime.hs  Simple.hs  Types.hs
src/Model/Memory/: Parsers.hs
